# uflowmeter

./: .embed.toml  ARCHITECTURE.md  Cargo.toml  HISTORY_TESTS_SUMMARY.md  Makefile  README.md  TESTS.md  TEST_SUITE_SUMMARY.md  main.rs  memory.x  run_host.sh  run_tests.sh
.cargo/: config  config.local.toml  config.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BUGFIXES.md  CODE_REVIEW_RUST_2026.md  COVERAGE.md  DELIVERY_SUMMARY.md  FIX_SUMMARY.md  HARDWARE_INTEGRATION.md  HISTORY_SYSTEM.md  HISTORY_TESTS_GUIDE.md  MODBUS_MAP.md  MODBUS_TESTS.md  TDC1000_REGISTER_MAP.md  TDC7200_REGISTER_MAP.md  TESTING.md  TESTING_INDEX.md  TESTS_GUIDE.md  TIMESTAMP_FIX.md  UI_ARCHITECTURE.md  ULTRASONIC_FLOW.md
examples/: README.md  display_example.rs  hd44780_basic.rs  lcd_display_usage.md  options_example.rs  power_management_example.rs  rtic_low_power_advanced.rs  ui_examples.md  ui_examples.rs  ui_examples_embedded.rs  ultrasonic_flow_example.rs
release/v0.1.0/: README.md  changelog.txt  checksums.txt  memory_usage.txt  uflowmeter.elf  uflowmeter.hex
src/: apps.rs  calibration.rs  history.rs  history_lib.rs  history_lib_tests.rs  history_tests.rs  lib.rs  main.rs  mbus.rs  modbus.rs  modbus_handler.rs  options.rs  shell.rs  tests.rs  ui.rs  ui_history_tests.rs  ui_logic_tests.rs
src/gui/: button.rs  clickable_label.rs  date_time_widget.rs  edit.rs  edit_number.rs  editbox.rs  empty.rs  history_widget.rs  label.rs  list.rs  live_meter.rs  macros.rs  mod.rs
src/hardware/: display.rs  gpio_power.rs  hd44780.rs  keyboard.rs  mod.rs  pins.rs  power.rs  tdc1000.rs  tdc7200.rs
src/measurement/: mod.rs  ultrasonic_flow.rs
tests/: ultrasonic_flow_examples.rs
